# Levantine-Translation

./: .gitignore  README.md  pyproject.toml
src/: create_dataset.sh  download_data.py  evaluate.sh  finetune.sh  seq_2_seq.sh
src/data_processing/: create_hf_dataset.py  download_data.sh  prepare_training_datasets.py  process_data.py
src/evaluate/: bleu.py  perplexity.py
src/notebooks/: Collect_data.ipynb  process_data.ipynb  transliteration.ipynb
src/training/: seq_2_seq.py  supervised_finetuning.py
src/utils/: transliterate.py  transliterator.py
