[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "torch==2.5.1+cxx11.abi",
    "torchaudio==2.5.1+cxx11.abi",
    "torchvision==0.20.1+cxx11.abi",
    "trl>=0.12.2",
    "wandb>=0.19.10",
    "cython>=3.0.11",
    "deepspeed>=0.16.3",
    "intel-extension-for-pytorch==2.5.10+xpu",
    "ipykernel>=6.29.5",
    "oneccl-bind-pt==2.5.0+xpu",
    "evaluate>=0.4.3",
]

[tool.uv]
index-strategy = "unsafe-first-match"

[[tool.uv.index]]
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu-idp/us/"

[[tool.uv.index]]
name = "intel-conda"
url = "https://pypi.anaconda.org/intel/simple"


[[tool.uv.index]]
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"

[[tool.uv.index]]
name = "intel-python"
url = "https://software.repos.intel.com/python/pypi"

#[[tool.uv.index]]
#name = "pytorch-cu121"
#url = "https://download.pytorch.org/whl/cu11"
#explicit = true

