[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "trl>=0.12.2",
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "uroman>=1.3.1.1",
    "wandb>=0.19.10",
    "cython>=3.0.11",
    "ipykernel>=6.29.5",
    "evaluate>=0.4.3",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.4",
    "camel-tools>=1.5.6",
    "nltk>=3.9.1",
]

[tool.uv]
index-strategy = "unsafe-first-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit=true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
